--- a/views/allProducts/allProducts.view.html
+++ b/views/allProducts/allProducts.view.html
@@ -74,9 +74,9 @@
 						<td style="padding:5px;border:1px solid" width="164">{{d.pName.S}}</td>
 						<td style="padding:5px;border:1px solid" width="206">{{d.pCompany.S}}</td>
 						<td style="padding:5px;border:1px solid" width="228">{{d.pDesc.S}}</td>
-						<td style="padding:5px;border:1px solid" width="155">{{d.pCost.N}}</td>
-						<td style="padding:5px;border:1px solid" width="143">{{d.pTax.N}}</td>
-						<td style="padding:5px;border:1px solid" width="168">{{d.pStock.N}}</td>
+						<td style="padding:5px;border:1px solid" width="155">{{d.pCost.S}}</td>
+						<td style="padding:5px;border:1px solid" width="143">{{d.pTax.S}}</td>
+						<td style="padding:5px;border:1px solid" width="168">{{d.pStock.S}}</td>
 					</tr>
 				</table>
 				</div>
